[gd_scene load_steps=5 format=3 uid="uid://b8b4r4lh1mnai"]

[ext_resource type="Script" path="res://Scenes/MainMenu.gd" id="1_gi622"]
[ext_resource type="VideoStream" path="res://Assets/Videos/Overworked_Title.ogv" id="2_gkx2v"]
[ext_resource type="FontFile" uid="uid://5wmflf8ywusa" path="res://Assets/Cascadia.ttf" id="4_eue56"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k524e"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gi622")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_gkx2v")
autoplay = true
loop = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="AspectRatioContainer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1377.0
offset_top = 588.0
offset_right = 1422.0
offset_bottom = 645.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_eue56")
theme_override_font_sizes/font_size = 40

[node name="start_button" type="Button" parent="."]
layout_mode = 0
offset_left = 839.0
offset_top = 651.0
offset_right = 1066.0
offset_bottom = 741.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.471375, 0.471375, 0.471375, 1)
theme_override_colors/font_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_focus_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_hover_pressed_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_disabled_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_fonts/font = ExtResource("4_eue56")
theme_override_font_sizes/font_size = 68
theme_override_styles/focus = SubResource("StyleBoxEmpty_k524e")
text = "start"
flat = true

[node name="options_button" type="Button" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 730.0
offset_right = 1104.0
offset_bottom = 820.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.471375, 0.471375, 0.471375, 1)
theme_override_colors/font_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_focus_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_hover_pressed_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_disabled_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_fonts/font = ExtResource("4_eue56")
theme_override_font_sizes/font_size = 68
theme_override_styles/focus = SubResource("StyleBoxEmpty_k524e")
text = "options"
flat = true

[node name="quit_button" type="Button" parent="."]
layout_mode = 0
offset_left = 835.0
offset_top = 812.0
offset_right = 1075.0
offset_bottom = 902.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.471375, 0.471375, 0.471375, 1)
theme_override_colors/font_hover_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_focus_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_hover_pressed_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_colors/font_disabled_color = Color(0.470588, 0.470588, 0.470588, 1)
theme_override_fonts/font = ExtResource("4_eue56")
theme_override_font_sizes/font_size = 68
theme_override_styles/focus = SubResource("StyleBoxEmpty_k524e")
text = "quit"
flat = true

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 487.0
offset_right = 1920.0
offset_bottom = 572.0
theme_override_colors/font_color = Color(0.776929, 0.0291167, 0, 1)
theme_override_fonts/font = ExtResource("4_eue56")
theme_override_font_sizes/font_size = 70
text = "overworked"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1201.0
offset_top = 597.0
offset_right = 1381.0
offset_bottom = 634.0
theme_override_colors/font_color = Color(0.460995, 0.460995, 0.460995, 1)
theme_override_fonts/font = ExtResource("4_eue56")
theme_override_font_sizes/font_size = 30
text = "Debug Mode"

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="start_button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_pressed"]
